Tasklist and new task form added basic styles and solved overflow problem

--- a/sass/components/_new-task-form.scss
+++ b/sass/components/_new-task-form.scss
@@ -1,3 +1,59 @@
 .new-task-form {
-  
+  padding: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  & > div {
+    margin: 5px 0;
+    height: 45px;
+
+    &:nth-child(1) {
+      border: 10px solid rgba(124, 125, 255, 0.5);
+      width: 100%;
+      grid-column: 1 / span 2;
+    }
+
+    &:nth-child(2), &:nth-child(3) {
+      border: 10px solid rgba(124, 125, 255, 0.5);
+    }
+
+    div {
+      position: relative;
+      height: 100%;
+      label {
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translate(0%, -50%);
+        font-size: 16px;
+        cursor: text;
+        transition: all 0.3s ease-in-out;
+
+        &.label-top-position {
+          top: -20%;
+          font-size: 15px;
+        }
+      }
+
+      input {
+        width: 100%;
+        height: 100%;
+        border: 1px solid rgba(124, 125, 255, 0.5);
+        border-radius: 5px;
+        font-size: 16px;
+        padding-left: 10px;
+
+        &::placeholder {
+          opacity: 0;
+        }
+
+        &:focus {
+          &::placeholder {
+            opacity: 0.5;
+          }
+        }
+      }
+    }
+  }
 }
