--- a/sass/layout/_tasklist-section.scss
+++ b/sass/layout/_tasklist-section.scss
@@ -20,4 +20,53 @@
       margin: 20px;
     }
   }
+
+  button {
+    &.button-type-2 {
+      font-weight: 600;
+      color: rgba(124,125,255,1);
+      span {
+        color: rgba(124,125,255,1);
+      }
+
+      &:disabled {
+        color: rgba(124,125,255,0.5);
+        cursor: not-allowed;
+        span {
+          color: rgba(124,125,255,0.5);
+        }
+      }
+    }
+  }
+
+  p {
+    margin: 20px;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    overflow-y: scroll;
+
+    li {
+      background-color: rgb(65, 143, 207);
+      color: white;
+      padding: 20px;
+      margin: 20px;
+      border-radius: 10px;
+      position: relative;
+
+      button {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 20px;
+      }
+
+      p {
+        margin: 5px 0;
+      }
+    }
+  }
 }
