--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,46 @@ footer {
   right: 0;
   margin: 20px;
 }
+.tasklist button.button-type-2 {
+  font-weight: 600;
+  color: rgb(124, 125, 255);
+}
+.tasklist button.button-type-2 span {
+  color: rgb(124, 125, 255);
+}
+.tasklist button.button-type-2:disabled {
+  color: rgba(124, 125, 255, 0.5);
+  cursor: not-allowed;
+}
+.tasklist button.button-type-2:disabled span {
+  color: rgba(124, 125, 255, 0.5);
+}
+.tasklist p {
+  margin: 20px;
+}
+.tasklist ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  overflow-y: scroll;
+}
+.tasklist ul li {
+  background-color: rgb(65, 143, 207);
+  color: white;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  position: relative;
+}
+.tasklist ul li button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 20px;
+}
+.tasklist ul li p {
+  margin: 5px 0;
+}
 
 .login-register-form {
   background-color: rgba(255, 255, 255, 0.7);
@@ -230,6 +270,56 @@ footer {
   margin-left: auto;
   background: none;
   color: black;
+}
+
+.new-task-form {
+  padding: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.new-task-form > div {
+  margin: 5px 0;
+  height: 45px;
+}
+.new-task-form > div:nth-child(1) {
+  border: 10px solid rgba(124, 125, 255, 0.5);
+  width: 100%;
+  grid-column: 1/span 2;
+}
+.new-task-form > div:nth-child(2), .new-task-form > div:nth-child(3) {
+  border: 10px solid rgba(124, 125, 255, 0.5);
+}
+.new-task-form > div div {
+  position: relative;
+  height: 100%;
+}
+.new-task-form > div div label {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translate(0%, -50%);
+  font-size: 16px;
+  cursor: text;
+  transition: all 0.3s ease-in-out;
+}
+.new-task-form > div div label.label-top-position {
+  top: -20%;
+  font-size: 15px;
+}
+.new-task-form > div div input {
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(124, 125, 255, 0.5);
+  border-radius: 5px;
+  font-size: 16px;
+  padding-left: 10px;
+}
+.new-task-form > div div input::placeholder {
+  opacity: 0;
+}
+.new-task-form > div div input:focus::placeholder {
+  opacity: 0.5;
 }
 
 /*# sourceMappingURL=styles.css.map */
